--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.87MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 152.69.202.245, port: 27614, type: vmess, uuid: a7fe18a9-8b49-43fb-ddde-b4934bf11862, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 6d2b7ae6-7b67-4116-b6ae-3069c54d2042, skip-cert-verify: true}
   - {name: 🇮🇹 意大利-1.22MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 6d2b7ae6-7b67-4116-b6ae-3069c54d2042, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-16.38MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-14.90MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.34MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-549.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-16.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-14.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
