--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇳🇱 荷兰-756.8KB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.76MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-969.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-1.50MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-977.3KB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-11.57MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.43MB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 6d2b7ae6-7b67-4116-b6ae-3069c54d2042, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-10.33MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.56MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇮🇹 意大利-706.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
   - {name: 🇺🇸 美国-535.8KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇬🇧 英国-1.66MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-409.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-756.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-11.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.56MB/s(Youtube:不良林)
       - 🇮🇹 意大利-706.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-535.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
